Added skeleton of cropping dialogue

--- a/PhotoResizer/PhotoResizer.csproj
+++ b/PhotoResizer/PhotoResizer.csproj
@@ -85,6 +85,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmImageCrop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmImageCrop.Designer.cs">
+      <DependentUpon>frmImageCrop.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmVideoTrim.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmImageCrop.resx">
+      <DependentUpon>frmImageCrop.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmVideoTrim.resx">
       <DependentUpon>frmVideoTrim.cs</DependentUpon>
     </EmbeddedResource>
